# ngi

./: .gitignore  CHANGELOG.md  Cargo.toml  DESIGN.md  LICENSE  README.md
.github/workflows/: ci.yml
src/: freshness.rs  indexer.rs  lib.rs  main.rs  ngram.rs  query.rs  search.rs  storage.rs  walk.rs
tests/: agentic.rs  auto_index.rs  review_fixes.rs
